--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coursera-Test!</title>
+	<title>Coursera-Test</title>
 </head>
 <body>
-<h1>Coursera-Test!It's a great course</h1>
+<h1>Our Menu</h1>
 </body>
 </html>
